--- a/AngelLayout/AsnicForm.en.resx
+++ b/AngelLayout/AsnicForm.en.resx
@@ -411,6 +411,10 @@
         AAAAAAAH8AAAAAAAAA/4AAAAAAAAH/4AAAAAAAB//wAAAAAAAP8=
 </value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
+    <value>CenterScreen</value>
+  </data>
   <data name="$this.Text" xml:space="preserve">
     <value>wjcking angle Panaroma</value>
   </data>
