--- a/AngelLayout/AsnicForm.resx
+++ b/AngelLayout/AsnicForm.resx
@@ -126,6 +126,10 @@
   <data name="&gt;&gt;menuSearch.Name" xml:space="preserve">
     <value>menuSearch</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="angelView.MinimumSize" type="System.Drawing.Size, System.Drawing">
+    <value>20, 20</value>
+  </data>
   <data name="&gt;&gt;menuHistory.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -136,15 +140,14 @@
   <data name="&gt;&gt;statusStrip1.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;menuRegisterInfo.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="&gt;&gt;试图VToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="menuHelp.Size" type="System.Drawing.Size, System.Drawing">
     <value>141, 22</value>
+  </data>
+  <data name="menuSearch.Text" xml:space="preserve">
+    <value>试题检索</value>
   </data>
   <data name="&gt;&gt;statusStrip1.Name" xml:space="preserve">
     <value>statusStrip1</value>
@@ -156,7 +159,7 @@
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>Main</value>
+    <value>AsnicForm</value>
   </data>
   <data name="menuQuit.Size" type="System.Drawing.Size, System.Drawing">
     <value>180, 22</value>
@@ -178,6 +181,9 @@
   </data>
   <data name="&gt;&gt;menuStartPage.Name" xml:space="preserve">
     <value>menuStartPage</value>
+  </data>
+  <data name="检索SToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>59, 21</value>
   </data>
   <data name="menuMyFile.Size" type="System.Drawing.Size, System.Drawing">
     <value>180, 22</value>
@@ -206,11 +212,11 @@
   <data name="&gt;&gt;工具TToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;toolStrip.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
   <data name="menuRestore.Size" type="System.Drawing.Size, System.Drawing">
     <value>118, 22</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="menuStartPage.Text" xml:space="preserve">
     <value>起始页</value>
@@ -227,11 +233,14 @@
   <data name="&gt;&gt;angelView.Type" xml:space="preserve">
     <value>AngelLayout.AngelView, AngelLayout, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
   </data>
+  <data name="&gt;&gt;toolStripMenuItem2.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="帮助HToolStripMenuItem.Text" xml:space="preserve">
     <value>帮助(&amp;H)</value>
   </data>
-  <data name="&gt;&gt;menuQuit.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="menuQuit.Text" xml:space="preserve">
+    <value>退出(&amp;Q)</value>
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="angelView.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
@@ -245,6 +254,12 @@
   </data>
   <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
     <value>6, 12</value>
+  </data>
+  <data name="menuStartPage.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>F1</value>
+  </data>
+  <data name="试图VToolStripMenuItem.Text" xml:space="preserve">
+    <value>视图(&amp;V)</value>
   </data>
   <data name="&gt;&gt;angelView.Name" xml:space="preserve">
     <value>angelView</value>
@@ -264,8 +279,8 @@
   <data name="menuSearch.Size" type="System.Drawing.Size, System.Drawing">
     <value>168, 22</value>
   </data>
-  <data name="&gt;&gt;menuRegisterInfo.Name" xml:space="preserve">
-    <value>menuRegisterInfo</value>
+  <data name="toolStrip.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 25</value>
   </data>
   <data name="&gt;&gt;menuStrip.Name" xml:space="preserve">
     <value>menuStrip</value>
@@ -273,20 +288,11 @@
   <data name="menuStrip.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 0</value>
   </data>
-  <data name="&gt;&gt;工具TToolStripMenuItem.Name" xml:space="preserve">
-    <value>工具TToolStripMenuItem</value>
-  </data>
   <data name="&gt;&gt;menuBackup.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="menuMyFile.Text" xml:space="preserve">
-    <value>打开(&amp;O)</value>
-  </data>
   <data name="menuStartPage.Size" type="System.Drawing.Size, System.Drawing">
     <value>133, 22</value>
-  </data>
-  <data name="menuSearch.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>Ctrl+S</value>
   </data>
   <data name="menuStrip.TabIndex" type="System.Int32, mscorlib">
     <value>33</value>
@@ -300,35 +306,26 @@
   <data name="menuHelp.Text" xml:space="preserve">
     <value>查看帮助(&amp;H)</value>
   </data>
-  <data name="&gt;&gt;menuSettings.Name" xml:space="preserve">
-    <value>menuSettings</value>
-  </data>
   <data name="&gt;&gt;angelView.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
   <data name="&gt;&gt;menuStrip.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
-  <data name="toolStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>800, 31</value>
-  </data>
   <data name="statusStrip1.Size" type="System.Drawing.Size, System.Drawing">
     <value>800, 22</value>
-  </data>
-  <data name="&gt;&gt;menuBackup.Name" xml:space="preserve">
-    <value>menuBackup</value>
   </data>
   <data name="menuMyFile.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
     <value>F4</value>
   </data>
-  <data name="toolStrip.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 25</value>
+  <data name="&gt;&gt;工具TToolStripMenuItem.Name" xml:space="preserve">
+    <value>工具TToolStripMenuItem</value>
   </data>
-  <data name="menuSettings.Text" xml:space="preserve">
-    <value>配置(&amp;O)</value>
+  <data name="menuHistory.Text" xml:space="preserve">
+    <value>检索历史记录</value>
   </data>
-  <data name="&gt;&gt;toolStripMenuItem2.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripSeparator, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>138, 6</value>
   </data>
   <data name="&gt;&gt;menuStrip.Parent" xml:space="preserve">
     <value>$this</value>
@@ -632,8 +629,8 @@
         AAAAAAAH8AAAAAAAAA/4AAAAAAAAH/4AAAAAAAB//wAAAAAAAP8=
 </value>
   </data>
-  <data name="menuStartPage.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
-    <value>F1</value>
+  <data name="menuSearch.ShortcutKeys" type="System.Windows.Forms.Keys, System.Windows.Forms">
+    <value>Ctrl+S</value>
   </data>
   <data name="MenuMain.Text" xml:space="preserve">
     <value>文件(&amp;F)</value>
@@ -644,8 +641,8 @@
   <data name="statusStrip1.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, 428</value>
   </data>
-  <data name="toolStrip.TabIndex" type="System.Int32, mscorlib">
-    <value>34</value>
+  <data name="statusStrip1.Text" xml:space="preserve">
+    <value>statusStrip1</value>
   </data>
   <data name="&gt;&gt;toolStripMenuItem1.Name" xml:space="preserve">
     <value>toolStripMenuItem1</value>
@@ -668,11 +665,11 @@
   <data name="angelView.Size" type="System.Drawing.Size, System.Drawing">
     <value>800, 372</value>
   </data>
-  <data name="statusStrip1.Text" xml:space="preserve">
-    <value>statusStrip1</value>
+  <data name="toolStrip.TabIndex" type="System.Int32, mscorlib">
+    <value>34</value>
   </data>
-  <data name="angelView.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>20, 20</value>
+  <data name="&gt;&gt;menuSettings.Name" xml:space="preserve">
+    <value>menuSettings</value>
   </data>
   <data name="&gt;&gt;toolStripMenuItem2.Name" xml:space="preserve">
     <value>toolStripMenuItem2</value>
@@ -686,32 +683,35 @@
   <data name="&gt;&gt;menuStrip.Type" xml:space="preserve">
     <value>System.Windows.Forms.MenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>138, 6</value>
+  <data name="&gt;&gt;menuBackup.Name" xml:space="preserve">
+    <value>menuBackup</value>
   </data>
-  <data name="检索SToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>59, 21</value>
+  <data name="&gt;&gt;menuQuit.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="menuQuit.Text" xml:space="preserve">
-    <value>退出(&amp;Q)</value>
+  <data name="&gt;&gt;试图VToolStripMenuItem.Name" xml:space="preserve">
+    <value>试图VToolStripMenuItem</value>
+  </data>
+  <data name="toolStrip.Size" type="System.Drawing.Size, System.Drawing">
+    <value>800, 31</value>
   </data>
   <data name="&gt;&gt;statusStrip1.Type" xml:space="preserve">
     <value>System.Windows.Forms.StatusStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="试图VToolStripMenuItem.Text" xml:space="preserve">
-    <value>视图(&amp;V)</value>
+  <data name="menuMyFile.Text" xml:space="preserve">
+    <value>打开(&amp;O)</value>
   </data>
   <data name="&gt;&gt;menuMyFile.Name" xml:space="preserve">
     <value>menuMyFile</value>
   </data>
-  <data name="menuSearch.Text" xml:space="preserve">
-    <value>试题检索</value>
+  <data name="menuSettings.Text" xml:space="preserve">
+    <value>配置(&amp;O)</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>800, 450</value>
   </data>
-  <data name="&gt;&gt;试图VToolStripMenuItem.Name" xml:space="preserve">
-    <value>试图VToolStripMenuItem</value>
+  <data name="&gt;&gt;$this.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;menuStartPage.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -719,11 +719,11 @@
   <data name="&gt;&gt;menuQuit.Name" xml:space="preserve">
     <value>menuQuit</value>
   </data>
-  <data name="menuHistory.Text" xml:space="preserve">
-    <value>检索历史记录</value>
+  <data name="&gt;&gt;menuRegisterInfo.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;toolStrip.Parent" xml:space="preserve">
-    <value>$this</value>
+  <data name="&gt;&gt;menuRegisterInfo.Name" xml:space="preserve">
+    <value>menuRegisterInfo</value>
   </data>
   <data name="工具TToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>59, 21</value>
