--- a/AngelLayout/Midow.resx
+++ b/AngelLayout/Midow.resx
@@ -120,11 +120,20 @@
   <metadata name="menuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="menuStrip.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>130, 17</value>
   </metadata>
+  <metadata name="statusStrip1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>251, 17</value>
+  </metadata>
+  <metadata name="toolStrip1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="toolStripButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -142,95 +151,22 @@
         TgDQASA1MVpwzwAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="textBox1.Text" xml:space="preserve">
-    <value>单条：      angelview.navigate(@"f:\vsprojects\angelwolf\rastera\asnic\rastera\ketself.html");
-执行：斯拉夫 去玩儿 阿斯蒂芬
-函数.人类创造范围：必备 基本 生活 工作 娱乐 防备抵御 //not standout
-        人造人：
-            .女铝口人内娲 彩欧时 三晶角体结界 传送 端口?≈江山形成
-            知道 ！= 死亡 眼睛 传送 应该是最动态的部位 却最软弱
-            孤独 ？：分裂-商人-传送
-            索引：蔡培 蔡伦 line:99x 西方同性恋
-        人造物：
-            发明与创造出 利用性
-                性质 物理 不一样 积累性
-
-            技艺技术引导性 
-            发现实践性：火药 马镫 传送 从哪儿到哪儿               
-
-        地理：索来德形成出来 一个地方有的其他地方没有
-                /^m&amp;m/ 总体外形物质形状相同 但是内容不一样都有 地球区域技艺技术不同 
-                
-        语言？=维赛德
-            盅锅自：四兀 无主 兀术 线纸 星角 形别 水 
-            西欧字符：
-
-    追溯..分析.关键词：限制创造性 //lonic.traceback.standout
-
-解释：索引-牵连 \\renliyindex-leonindex-rockmegaindex   
-    关键词：*人类.忽略 相关 关联
-        1 人们只知道毛泽东北京”光明“ 却不知道 背后那些相关的人 以及反对的人 一旦涉及到
-        2 相关：事件 时间 地点 人物 
-        3 名声以外
-        4 解释  
-            h：人 
-            l：人看不见的空间生命体
-            p:附体提到哪些人
-        index.triangle://毛泽东 光朝拜 人体穿入 滚动
-                h
-                /   \
-            l       p
-    人头索引 地球 东 中 西
-    一个人点面另外一个国家或区域人
-
-    函数.打忘后经验获取         
-
-    生命体 声明体 刚体 关联 比重
-        相互关系：人 莱昂 洛克梅根（标量影响 ) 
-        范围：最近 最远 莱昂尼克 \\handle.left|right metricwhich
-
-    结束.罗塞塔旋转
-  
-left 2-o-5?!= 30 date:1/10 ?handmovement-terminating
-软硬见尸：水性电砖贡辆靓
-reason: projection use  absorb:insideearth~outsphere
-
-函数：气层内外.形态体
-    索来德 ：软 维赛德：硬  
-    美为本 人为准 美为本 水为准 美为准 
-    renlay baeutify  waterize waterilize waterblance waterlever waterie whaterly butterfly
-    rwb
-    为：本 准 水 美 人 妲七层：内|外
-    形态体：
-        兀^术菱lz之 lack.hard
-        五耳铠稀
-        牛群 lacof:soft.butrabbered
-        荆轲 l?.lightout
-        geo lacof:delicacy
-        陆毅 路易 田
-    半形态体：
-        日//transhuman
-追溯.理序
-
-关键.小笋星.通信点-球
-
-起始.分析.关键词.音乐 科鲁兹 kross   
-        
-    defintion:prodigy@porridge:beat^hoven // farm^lucy~lily-roma /~ 罗马古代酒神 /
-
-    贝多芬 born:1685-3-31 portaldemark:1750-7-28
-    莫扎特 born:1685-3-31 portaldemark:1750-7-28
-    巴赫 born:1685-3-31 portaldemark:1750-7-28            
-    勃拉姆斯born:1685-3-31 portaldemark:1750-7-28
-
-    电线 赫兹 分贝尔
-
-    出生 到创作 灵感 创作\^adverse\ 闹别扭 事件影响  牵制|影响
-    维赛德证明点：第九悲伤里面夹杂着搞笑？可能吗 应该不会 但是可以克朗河 其他声音
-    acm's unique&amp;singliartiy
-        
-    是否涉及到宗教 // kross.transcolor.html
-
-回溯</value>
-  </data>
+  <metadata name="textBox1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="textBox2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="label3.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="label1.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="label2.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="$this.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
 </root>
