fast but chinese not

--- a/AngelLayout/Karet.resx
+++ b/AngelLayout/Karet.resx
@@ -117,4 +117,85 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="fastColoredTextBox1.Text" xml:space="preserve">
+    <value>到百度首页
+FastColoredTextBox 中文
+百度首页设置登录
+网页资讯视频图片知道文库贴吧地图采购更多
+百度热榜换一换
+131省区市新增确诊144例 本土126例478万
+2返乡人员如何划定?国家卫健委回应 热461万
+3中方对蓬佩奥等28人实施制裁445万
+4黑龙江新增68例确诊 85例无症状414万
+5青海省原副省长文国栋被决定逮捕 新400万
+6河北新增20例本土确诊均在石家庄386万
+7疑似郑爽退圈声明曝光372万
+8吉林新增确诊本地33例无症状6例359万
+9山东平度确定2名外省返平阳性患者347万
+10拜登宣誓就任美国总统334万
+11女教师评职称申诉被拒起诉教育局323万
+12复旦附属肿瘤医院徐汇院区门诊停诊 新311万
+13拜登签署重新加入巴黎气候协定方案300万
+14宁波一老师与初中生发生关系被逮捕290万
+15官方回应旅美大熊猫瘦骨嶙峋280万
+收起工具时间不限所有网页和文件站点内检索
+搜索工具百度为您找到相关结果约59个
+C#_norsd的专栏-CSDN博客
+2020年12月19日 1. FastColoredTextBox 中文重叠显示设置IMEMode = IMEMode.On 就可以正常显示和写入新的中文 2012-10-08 17:07:52 1352 2 原创 checkErrorStatus p...
+CSDN技术社区
+
+百度快照
+asp.net 自定义tab控件实现 - 空明流光 - 博客园
+2013年4月13日 @ WORLDLIFastColoredTextBox... --沧海一杰 2. Re:C#动态编译并执行代码 上面那截图里面,文本编辑如何显示行号,字体颜色,感觉像在NET平台上操作一样?...
+博客园
+
+百度快照
+用户jack9527 联合开发网 - pudn.com
+2012年2月21日 FastColoredTextBox-master.rar - FastColoredTextBox一个可以高亮代码的组件,自带C#,VB,SQL,HTTP,XML,Lua等关键字高亮,带自动缩进,折叠等. 经过修改...
+www.pudn.com/User/profile/id/3...
+
+百度快照
+c# 控件,自定义控件问题_norsd的专栏-CSDN博客_fastcolore...
+2012年10月8日 1. FastColoredTextBox 中文重叠显示设置IMEMode = IMEMode.On 就可以正常显示和写入新的中文
+CSDN技术社区
+
+百度快照
+谈论Media Portal 对中文支持的分析_ Roosevelt 的专栏-CS...
+2007年4月8日 Media Portal 对中文支持的分析 Media Portal 是一套开源的强大的个人媒体中心,它可以让你的PC变成像电视机一样的简单家用 电器。它支持模拟电视卡、...
+CSDN技术社区
+
+百度快照
+2014 年 1月 随笔档案 - 李祥 - 博客园
+fastcoloredtextbox 中文不重叠 摘要:DrawLineChars方法:private void DrawLineChars(PaintEventArgs e, int firstChar, int lastChar, int iLine, int iWordWrap...
+博客园
+
+百度快照
+c# 控件,自定义控件问题 - norsd - 博客园
+2012年10月8日 1. FastColoredTextBox 中文重叠显示 设置IMEMode = IMEMode.On 就可以正常显示和写入新的中文 好文要顶 关注我 收藏该文 norsd 关注- 0 粉丝- 1 +加...
+博客园
+
+百度快照
+textEditor网页文本编辑器-Javascript文档类资源-CSDN下载
+TextEditor2.2的源代码.rar FireFX-RC2-2_0_0_46-bin-fixed.zip FastColoredTextBoxCF(C#代码语法高亮着色控 108KB c# 编辑器winform2018-09-12 c#的winform...
+CSDN技术社区
+
+百度快照
+ICSharpCode.TextEditor 2.2 源代码下载-CSDN论坛
+2020年5月16日 TextEditor2.2的源代码.rar FireFX-RC2-2_0_0_46-bin-fixed.zip FastColoredTextBoxCF(C#代码语法高亮着色控件源码和样例).rar 源码编辑器(Notepad.5...
+CSDN技术社区
+
+百度快照
+相关搜索
+日语翻译中文      中文转英文       中文翻译英文
+百度翻译在线翻译        什么意思中文      中文
+&lt; 上一页
+1
+2
+3
+4
+5
+6
+帮助举报用户反馈
+</value>
+  </data>
 </root>
